Added text to speech and speech to text

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,18 +18,49 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Translate"
+        android:text="Speak"
         android:id="@+id/button"
         android:layout_below="@+id/editText"
         android:layout_alignParentLeft="true"
+        android:layout_marginTop="16dp"
+        android:onClick="ExceptSpeechInput"/>
+
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/language_spinner"
+        android:layout_below="@+id/translate_button"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:onClick="onTranslateClick"/>
+        android:entries="@array/language_array"
+        android:layout_marginTop="10dp"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Translate"
+        android:id="@+id/translate_button"
+        android:layout_below="@+id/editText"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:onClick="onTranslateClick"
+        android:layout_marginTop="70dp"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Read"
+        android:id="@+id/button2"
+        android:layout_below="@+id/language_spinner"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:onClick="readTheText"/>
 
     <TextView
         android:id="@+id/translationTextView"
         android:text="@string/translation_text_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_marginTop="94dp" />
+        android:layout_below="@id/button2"
+        android:layout_marginTop="10dp" />
 </RelativeLayout>
